<resources>
    <string name="app_name">CarpetCleaning</string>
    <string name="carpet_clean">Carpet Cleaning</string>
    <string name="carpetCategory1">Woven carpet</string>
    <string name="carpetCatrgory2">Tufted carpet</string>
    <string name="carpet1_price">10,000/Sq.ft</string>
    <string name="carpet2_price">5000/Sq.ft</string>
    <string name="booked_button">Book Service</string>
    <string name="carpet_clean_about">Our experienced in-house staff knows how to remove the deep-down dirt, stubborn stains and eliminate bacteria from the carpets.</string>
</resources>