<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/background_image">

    <TextView
        android:id="@+id/textView"
        android:layout_width="351dp"
        android:layout_height="80dp"
        android:layout_margin="44dp"
        android:padding="12dp"
        android:text="@string/carpet_clean"
        android:textColor="@color/white"
        android:textSize="45dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/carpet_imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.428" />

    <ImageView
        android:id="@+id/carpet_imageView"
        android:layout_width="362dp"
        android:layout_height="207dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.363"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.367"
        app:srcCompat="@drawable/carpet_clean_main" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="365dp"
        android:layout_height="119dp"
        android:layout_margin="10dp"
        android:fontFamily="sans-serif-black"
        android:lineSpacingExtra="2dp"
        android:padding="10dp"
        android:text="@string/carpet_clean_about"
        android:textSize="20dp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/carpet_imageView"
        app:layout_constraintVertical_bias="0.079" />

    <Button
        android:id="@+id/carpet_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#2196F3"
        android:onClick="carpet_category"
        android:text="@string/booked_button"
        android:textSize="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.536"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        tools:ignore="OnClick" />


</androidx.constraintlayout.widget.ConstraintLayout>